# BlockBuster

./: main.py  pyproject.toml
blockbuster/: __init__.py  cli.py  constants.py
blockbuster/api/: __init__.py  api.py
blockbuster/blocks/: __init__.py  registry.py
blockbuster/blocks/block_utils/: ast_type_analyzer.py
blockbuster/client/: __init__.py  client.py  index.html
blockbuster/client/static/: block.js  blocks.json  script.js  state.js  style.css
examples/: example.py
server/: app.py
server/static/: script.js  style.css
server/templates/: index.html
